# np-election-stats-82

./: .gitignore  Justfile  README.md  index.html  pyproject.toml
.github/workflows/: deploy.yml  scrape.yml
data/: manifest.json
data/index/: constituencies.json
data/merged/: latest.json
data/snapshots/ekantipur/: 2026-03-06T12-07-16.json  2026-03-06T12-08-52.json  2026-03-06T13-05-05.json  2026-03-06T13-06-15.json  2026-03-06T13-07-24.json  2026-03-06T13-08-33.json  2026-03-06T13-09-42.json  2026-03-06T13-10-52.json  2026-03-06T13-12-02.json  2026-03-06T13-13-10.json  2026-03-06T13-14-20.json  2026-03-06T13-15-29.json  2026-03-06T13-15-45.json  2026-03-06T13-16-39.json  2026-03-06T13-17-48.json  2026-03-06T13-18-56.json  2026-03-06T13-20-06.json  2026-03-06T13-21-15.json  2026-03-06T13-22-25.json  2026-03-06T13-23-34.json  2026-03-06T13-24-42.json  2026-03-06T13-25-51.json  2026-03-06T13-27-00.json  2026-03-06T13-28-10.json  2026-03-06T13-29-19.json  2026-03-06T13-30-29.json  2026-03-06T13-31-38.json  2026-03-06T13-32-48.json  2026-03-06T13-33-57.json  2026-03-06T13-35-07.json  2026-03-06T13-36-17.json  2026-03-06T13-37-44.json  2026-03-06T13-38-53.json  2026-03-06T13-40-02.json  2026-03-06T13-41-11.json  2026-03-06T13-42-20.json  2026-03-06T13-43-30.json  2026-03-06T13-44-40.json  2026-03-06T13-45-49.json  2026-03-06T13-46-58.json  (+1716 more)
data/snapshots/onlinekhabar/: 2026-03-06T12-07-22.json  2026-03-06T12-09-00.json  2026-03-06T13-05-14.json  2026-03-06T13-06-23.json  (+1740 more)
scrapers/: base.py  ekantipur.py  onlinekhabar.py  ratopati.py  run_all.py
(+1757 files in other folders)
